<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>particle_bicycle</name>
  <version>0.0.1</version>
  <description>Estimating position of a Robot Car (Bicycle Model) with a particle filter</description>
  <maintainer email="kpetrykin@gmail.com">memristor</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
